# axum-seaorm

./: .gitignore  Cargo.toml  README.md  build.rs
api/: Cargo.toml
api/src/: lib.rs
api/src/user/: user.rs
common/: Cargo.toml
common/src/: db.rs  lib.rs
common/src/ctx/: jwt.rs  mod.rs  req.rs  res.rs
common/src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs  user.rs
common/src/middleware/: auth.rs
common/src/models/: user.rs
common/src/utils/: mod.rs  tool.rs  upload.rs
config/: Cargo.toml  config.toml.back
config/src/: configs.rs  get.rs  lib.rs
grpc/: Cargo.toml
grpc/src/: lib.rs
grpc/src/user/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231015_000001_create_bakery_table.rs  m20231015_000002_create_chef_table.rs
proto/: helloworld.proto
service/: Cargo.toml
service/src/: lib.rs
service/src/user/: mod.rs  user.rs
