[package]
name = "rspro"
version = "0.1.0"
edition = "2021"

[workspace.package]
name = "rspro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rspro"
path="bin/src/main.rs"

[[bin]]
name = "buildproto"
path="build.rs"

[[bin]]
name = "grpc client"
path="bin/src/client.rs"

[workspace]
members = ['api','config','migration','common','grpc','service']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
api={path = "api"}
common = { path = "common"}
migration={path = "migration"}
service = { path = "service"}
config = { path = "config"}
grpc = {path = "grpc"}

tonic-build = { version = "0.9", features = ["prost"] }

dotenv="0.15.0"
toml = "0"

futures="^0.3"
#libe = { path = "./libe" }
axum={version ="0.6.20",features = ["headers"]}
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
prost = "0.11"
tonic = { version = "0.9" }
tonic-reflection = "0.9"
tower = { version = "0.4", features = ["full"] }
#mysql
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std", "macros" ] }
sea-orm-migration = "^0.12.0"
sqlx = { version = "0.7", features = [ "runtime-async-std","mysql" ] }
#json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
simple_logger = {version ="4.2.0" ,features = ["colors", "threads", "timestamps", "stderr"]}


[workspace.dependencies]
migration={path = "migration"}

futures="^0.3"
#libe = { path = "./libe" }
axum={version ="0.6.20",features = ["headers"]}
axum-extra = {version = "0" }
axum-server = "0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
prost = "0.11"
tonic = { version = "0.9" }
tonic-reflection = "0.9"
tower = { version = "0.4", features = ["full"] }

#mysql
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "^0.12.0"
sqlx = { version = "0.7", features = [ "runtime-async-std","mysql" ] }
#json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv="0.15.0"
toml = "0"

mime="0.3"
#  随机数
md5 = "0.7"
rand = "0.8"
uuid = "1"
scru128 = "3" #生成唯一id

once_cell = "1"

chrono = "0" #时间

headers = "0.3"
jsonwebtoken = "8"

openssl-sys = "0.9"
openssl = { version = "0.10.33", features = ["vendored"] }

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }