[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path='../common'}
service = { path = '../service'}
config = {path = "../config"}

futures = {workspace = true}
axum = {workspace = true, features = ["multipart"]}
tokio =  {workspace = true, features = ["full"] }
tokio-util = {  version = "0.7"}
tower = "0.4.13"
tower-http =   {  version = "0" ,features = ["fs", "trace"]}

askama = "0.11" #模板

uuid = {workspace = true}
chrono = "0.4" #时间
md5 = "0.7"

serde = { version = "1.0.189", features = ["derive"] }

sea-orm = {workspace = true,features = ["macros", "runtime-async-std","with-chrono"]}

openssl-sys = {workspace = true}
openssl = { workspace = true, features = ["vendored"] }
