[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration={path = "../migration"}
config={path = "../config"}

axum = {workspace = true ,features = ["headers"]}
axum-extra = {workspace = true}
axum-server = {workspace = true}
tokio =  {workspace = true, features = ["full"] }

sea-orm = {workspace = true,features = ["macros", "runtime-async-std","with-chrono"]}
sea-orm-migration = {workspace = true}


once_cell = {workspace = true}
chrono = {workspace = true}
scru128 = {workspace = true}

serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}

mime = {workspace = true}

headers = {workspace = true}
jsonwebtoken = {workspace = true}
md5 = {workspace = true}

openssl-sys = {workspace = true}
openssl = { workspace = true, features = ["vendored"] }