[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

once_cell = {workspace = true}

serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}

toml = {workspace = true}

openssl-sys = {workspace = true}
openssl = { workspace = true, features = ["vendored"] }